--- a/Analízis 2 informatikusoknak gyak Sorok, függvénysorok.ipynb
+++ b/Analízis 2 informatikusoknak gyak Sorok, függvénysorok.ipynb
@@ -33,6 +33,7 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": true,
+    "hide_input": true,
     "scrolled": true
    },
    "outputs": [],
@@ -62,6 +63,7 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": true,
+    "hide_input": true,
     "scrolled": true
    },
    "outputs": [],
@@ -74,6 +76,7 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": true,
+    "hide_input": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1084,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
