--- a/Analízis 2 informatikusoknak gyak Multivariable functions.ipynb
+++ b/Analízis 2 informatikusoknak gyak Multivariable functions.ipynb
@@ -40,7 +40,8 @@
    "outputs": [],
    "source": [
     "from sympy import *\n",
-    "from sympy.physics.vector import *"
+    "from sympy.physics.vector import *\n",
+    "from sympy.physics.vector import gradient"
    ]
   },
   {
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "hide_input": false,
     "solution2": "shown"
@@ -772,36 +773,36 @@
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAb8AAAArCAYAAADok4aTAAAABHNCSVQICAgIfAhkiAAACZdJREFU\neJztnXuIHeUZh59o0jWxBtcLJoY2kRRL0FJD1iYVY4XGoq0m2jYaROgqEmkCokKI+kc1ll4iYk2K\nNFXUqIVSW2MtlDbUW7wRtNsab1QxF5G1TUu6mkQj3o5/vDOeOePsOTNzvsvMN+8Dw57z7cx8v535\n7Xu+813eAUVRFEVRFEUxwAzgHmAP8BZwP3CMV0WKonzKQb4FeESDk2KL44B/AKPAqcDpwFHABo+a\nlHDQ2KWU5jhgN/AzYA5wErAFeMCnKCUYNgM/TZUtAvZ60KKEhcYuQ0zwLcATm4ER4NpE2SJgEzDV\niyI/zAWWRK/vA172qCUUZgK7gAPAx4nyg4F3gSM9aPKBessOGrsE9VcJZgItJBDtT2wHkG6EpnAY\nsB0J0C3gJWCyV0VhsBh4G/hSxvZF5J92c2L/JcBtjjXaRr1lB41dgvqrJL2CU1O4BzHO5cDq6PWt\nXhWFwVnAh8Dnx/n9ROCNxOsRYLoDXS5Rb9lBY5eg/ipJr+AU8xQwP3p9B3ClTVGOWYYY5rpE2Y1R\n2TleFIXDIPA/ZAxmLjAbOAP554wnmD0NzAJWADe4l2gV9ZY98sauLcBz0fYRMGRZl0vUX32QJzgB\nnBntcxVwu2ONSr0ZAh5BZuLtA7YB1yR+fwtwMfAC0oWjKHnIG7ti1gDrnKlTakGv4BQzAjwMTHIn\nTWkAFyJjNCt9C1FqR97YdQVwN82d1Kj0wcnATmQWVUjMR/rMdyAD5e8AzyPdb0d41NUkhoBXkTG/\nkFBvVYNhJG4d7FmHadRfDpiBtKjixcon+pVjjB/RniGVtb0OfNmbuuZwJ+1p2qGg3qoG5wF/BQZ8\nCzGM+ssBk5EJCadF75cCv/Mnxxjfp9MsTyKDxjcC/06Uv0x4LcaqMBt4BfilbyGGUW9VhzGkVyGe\n8HK2XzlGUH8pffF32ib5M51jAXPoNNe5ztUpdUa9pdjEib92pU7Ua/tN2YoUp0yhe5dBervJQJ27\nCtSnXqovPrwF6q+mYM1f6QH37cB7BYS9WWBfxR+DFJv1dbSBOtVLzcCHt0D91RSs+Sv94ffNApUo\n9WEMaRXFJnoE+EuX/eM8eYuBB6PXZwAPAd8AHo3OdT7w+3HOoV5qBmW99VtkwfIztJNJADwOLETG\n2Zd1OY/6qxmU9dcsZLZ+FmuA6w1oA4p1P+jmdosZSZS9RHaWiEnAd5HWVsyG6JidwDRkmnELuCvj\neFv4voa6dfdXGW+dmjjmhKhsGpKRpIUkmXCB7+unW3dvQTl/TQe2JrYdiXOszjheCZjz6TTW60im\nkauRx+88iOQNbCGtppgpwL+i8v9EP1+jd4olpTmU9da2qOzm6P0Po/ej6Kw9pU1Zf8Ucg8SsFjKT\nX5NgB8IC4FdI9+PiHvteR77B41mp4+YhOQVbSMt8PkpTyOuvMt5aHpX9F2m5Pxy9X2vyD1Aqi4vY\ndRiyVruFNOIr90ixLwCPIf21zyNr61RDMQ2D5MvjN4Qk6n4VeTTKB0jweQJ5QOaCjGOW0GmwbmMx\nVaMK97UqOmz7q6i3DkXSdLWAy2g3sOYU0OWbut/XKmiwFbsGkDHCFrIecFYBTaWZQ7FHbExHnkgM\n0u8/ivxjuKQOGr41znEXAc8ik1FMMw1Jptui3YIaQ8zuiyL+qsJ9rYqObhrG8xbY9dc6xFP7o5/P\nWKijCBq77GhwHbsOQr5RtoC9SCJw6wzS+ZThMmzDb3CtqobjkRZyFhOBPxiufwKSKikOSgPI4HEL\naVFlZZK3Tb/+qsJ9hWroSGro5i2w4y+QlFTJ7qwVFurIi8Yuexpcx64LaHtqN52TXy41XNenrEVy\nY5ZlHvCiIS0hargZaVnFfAdYj+SL/J5hDZcj5nmPdlfU8UhC2RawynB9eejHX1W4r1ANHVka0t4C\nu/6K+Rttn/lMUKyxy64Gl7FrmPHHBa83XBcAxwJ/7OP4I5CprKfk3H8j5v+Qqmv4OuHlhsxLP/4q\nel+hef7y5a31SFC6z0PdMRq77GuoVOwy3W21FBl8zGIG8jiKPcgg9/3IFNSYAcR8P0emo9ogBA1b\nkWS18b3Ls04mFMbzVx3uqwsd/WpIewvsems5Mk09XuJgKvVZGTR22ddQqdhl+sPv20gm8TTxo4FG\nkcWtpwNHIQuoQcaWNiLjSPca1hSahngd1ILEMeNtoZHlrzrcVxc6TGhIeys+xpa3TkGmuO9GPgh9\nTnbR2GVfQ9Cxa4zsmVKbkcWISRYhs3BALubHtB/D8RzwlRz1bST/1/aQNNyFjMcBnAXcjqSDCj3l\nU5a/bN1XyH9ve2noR4drDUlvQXP8pbHLjYYgY9fnkE/2w1PlM6Pyd5HpzPF2APn6XIRrU+f4AHg/\nVbYw47jQNKwDfpIqGwR+XfA8dSLLXyavKZS7t6FpyPIWhO0vjV0NjF3pxNb9EK+c35cq/yrSOpiX\nccz7BevYQOeg+Frka/T6RNloxnGhadjHZ7OXX0NnF1doZPnL5DWFcvc2NA1Z3oKw/aWxy52GysQu\nkx9+70Q/D0m8BmldHIrkhdzfZx3/j7aYfdH713ocF5qGQ1Ln+DEyXfyffZ63ymT5y+Q1hXL3NjQN\naW9B+P7S2OVOQ2Vil8kJL3uRdTpTU+Vbkf70e5FV9rORx+Pcmqj/Kdr5Iu8ArjSoK4+GuUifdswS\n4DbHGgC20O4v/whJ55PFVCStD8AlwDnIOpnlhjVXiSx/5bmmYNdfeTTY9lfe65DHX0lvQTP8pbGr\nPw0xRf0VlLdeJDuNzBAyC+gtpLWxDfmqG3Mm8ABwFTIAmpeN5B+w7aZhIvBG4vUIkq7HpYYka+ie\n6+5PyOM7mkaWv/JcU9v+6qXBhb/yegu6+0u91YnGrt4a0jTSXzcBF5c8dgTJ6j7JnJxCPI0kPl0B\n3OBJA8AVwN10n+67nc+2UpuA+qt/evlLvVUc9VabxvprIeVm7ZyMPCx1k1k5hbgFMf8LyGMwfDCM\nXINuzzI7FukjbyLqr/4Ypru/1FvFUW+1Gabh/tqETB3OywzkK3S8iPJEG6JycCEybXelp/rPQ5JI\nD/TYbxV2suvXBfVXOfL4S72l3iqL+gv4GvCDnPtORr6ynxa9X4osePTBEPKcKJMzYIswFtUfDxif\nnbHPAPALl6IqiPqrHL38pd5Sb/WD+itiGZL6pk7cicyUqjIX4TfrfVVQf5lHvSWot+zQKH9N9i0g\nJ7OBV6hQtvEu1OWauqAu16Iu/qrL9XRBXa5FXbwF9bmmiqIoiqIoiqIoiqIoiqIoiqIoiqLUhE8A\ncg1MLiH6exwAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAbMAAAAnCAYAAACFbaZmAAAABHNCSVQICAgIfAhkiAAACMdJREFU\neJztnXuIHdUZwH+7KhuNAXdrSUQkoWpETRpfUbGKi63RYKxBY9TSokaxqBBCiK6PEF9gaQhVo6IS\nH4sKxRe0f1iVGC21qLS2qGgSSowP4qNpiA+09dnrH98Md+7duffO45z5Zs9+PxhyZ3bmft/e+9vJ\nmXO+OQOGYRiGYRiGAWwDlrdtmw18CRxSfTqGMbHYVTsBo1IOB86IXj8KbFTMJTReAua2bbsVuJcw\nP2dzyXCJ+VSCRcBXwPTEttuAt4CpKhn5ZQryu/0faABvArurZhQWy4EtifWFwE7gBzrpeMVc8s+V\nyGfbvtyomZQnzKeS9AGvAOui9RXAduBAtYz88iAiylJgJHp9p2pGYXEc8pkOAQPIf2zLVDPyh7nk\nnynAtMSyBvgQOEAzKU+YTw6YB3wDXAV8xthuolA4FxHkusS21dG201UyCo8B5Ep/HvIHuRnYTTUj\nP5hL1TMCvA8cpJ2IB8wnh7wIfAvM107EGPe8DNyONIwWKOdihMHVSHHRTO1EjHpzEvAF8B1whHIu\nxvjnFqTf/xntRIwgWIn8RxZi16LhkDnAp8AS4AnsBGSU53zkKv9Q7USMcc8q4D1gf+1EjHozHfgA\nEQZgFtKiHtZKyCPHIAOsW4H/IVeiryNVUUOKeYXIesIeuDaXqmElsAMpKkoWgUzSTMox5pIDhoBN\nwD1t2x9B7hUKiVU0y13TlncJc1C5SvqRWzlGkGqzQd10vGEuVUMf0mOU9hn/VDEvl5hLRi4W0SrI\nX5GKodXISTfevhHYRSnHEBhG/jA3IS3pEDGXDFeYS0ZuXqEpxpNIiy/mYFqFWlh5dsZ4wlwyXFGZ\nS++0vVmv5eEywQxv7EH3y/j2ZY2DmO/kiGfujB/MJcMVXl1qn5vxLWRi1Kx8kCeYURmDtLZ4evFD\nBzHNnTAxlwxXeHUpzxt3o+HofYzy9CEtoM9pfr/PAU91OWYj0rD5Y7R+MvAscCLwfPQ+i4HHPOSb\nhvlUHyaT36U/Ab9HZnf4G1K5FvMX4ASk4Opc18mmYC7Vh6IuzQDe7rDPDcD1btIz6so/aF6uvwns\nmbLPbsCZNCvw7o72fxspBd4arT/gO1mj1hRx6fjEMfF9d9OQCQoawKke8zXqSxGX9kFm14mXrYn3\nGPGcr+GRY4G7kKukn3fZbzFjy11vReahvBm5CotLgGdEx+yBzCnYAD6K/t1CunBGGGTxqYhLAK9F\n234XrV8arb+PVaqFiE+XYqYi56QGMhVhrWbX3w/4M3JJ+TpwtsXPxCDyyJpuXEe2AdcZiWOORGax\naCCt6GQXUd3R/i61cygTu5dPRVy6JNq2HWltb4jWf5sjLy0muktl4vtwCeRJAv+MfraZCh6vNIDM\nqJGVfYDDotfTkFbbZNdJjeP4aXNG/hL4OzKm1YujgPuAfwH/RZ4SsB14AfgN0ppKcgatQlUxrtGN\nPD5pf5faORRxCbL7lNelycAniEe/ptlIOrj3r+IFc8ld/KpdGkDG2BrI/WgzMv4OpVhGuUdfvIa0\nCLSoW/zzgH1T9tsVeNxx7GnAfxBh4hbQx+h+HmV80v4utXPI6hL48Qmkhd5ABv4bSEGIFuaSu/hV\nutSPdF02kCdSHO7wvTvyY+CiEscfCbzhKJdQ4g/Q2i1zGrAWuB84y2HsPuBpmiecAWSwtYG0iPod\nxspKGZ+0v0vtHLK4BP58ijmI1i6lyzzEyIK55DZ+lS6dQ9Off9NaDHKxwzgtPAjsVfDYIaS6RWtK\noDrHvwcZ+PTJUkSWL2l2A81EJgBtAFd4jp9GUZ+0v0vtHLRdamc9Tbe0JpE1l9zHr8qlC+g8rna9\nj4C7INUlRRhA7j/5VY5jRnH3ixSJ7zKHXvEvRR4vMpEo6pO2S9o51NGltciJ59GK48ZU6RLon5uq\nil+r85LLrqNZyCVgO4uQx8lPT2y7DbnLfyrSvTWKdGU95DCfmG3A8rZts5FW4iEVxAe4kvRWxY0Z\n42+kOaDarfonJNJ80nYJ9H1y6RId3suVS5cgpdZxSb6Lqa6KYC51poxPVbpUKfORvtJ2+pDJJddF\n6yuQqpUDo/XjkT71VxPL7AzxRsnW+ngMmY0gyQbgjpLx8+QwhdbnEq1BKnIOyBh/DjKeBfI5r0Nm\nUAjlkRBppPmk7RL48ylrDi5dAr8+jSIns214HNvIQJUugf65KWt8KOdTlS5Vyi+A2zv8bB5SenkV\nUo0y10G8UbJ9YcuRm+xiFgI7cXOPQtYckowgJa55ntezP2OrwAYZ+0y2kOjkk6ZL4M+nPDnEuHIJ\nwvapSpdA/9yUNX47eX0K1qXTgXu7/PxF5D6T+QXf/xqkvDdevgG+btt2QspxxyGtwyGk/3cLUqJb\nZQ4xVyOt1Jk5485GBtGTrKaiElUluvmk5RK486lOLkHYPvl0CfTPTWVdgmI+BevS0XQe4D0JqYr7\njs432/ViCLn0jZcnkIHl5La0qU0GkL7xeUjLYzPF7zUpmgPIo9C3Rfvk5Se0PubiJmQy4JDp5JOm\nS+DOp7q4BOH75NMl0D83lXEJivsUrEu7Ay+lbJ+DzLW1BPmQn3EUb5Tsl9IvI90MnwELHMXPk8Mq\n4D3ksrwIFwKXR6+XIH3XdyMD7KGS5lMdXAI/PmXNwaVLMDF8qtIl0D835YlfxqegXfoDMCmxPh15\n1tCqaH0WMqA47CDWKNm/sFuiuC6FzZrDSmAH0qWQHGid1O2gNtYCP8qf3rgn6VNdXAI/PmXJwVwq\nTlUugf65KWv8sj4F7dIpSMkryKXvJsYOBD5C+hVcXkbJLsz5SL/4ob12dJxDH80ZoNuXrNU+/TSr\nmyYasU91cgn8+NQrB3OpHFW5BPrnpizxy/o0IVy6VjuBFNYDd2onUZAFZC8JDhHzyR3mUv0wl2rM\n3tSjkqUfuflxBLlvYrD77rXlZ9oJKGM+ucNcMpdcMdFdqpRhpC96E7rzqhlhMIz5ZLhhGHPJMAzD\nMAzDMAzDMAzDMAzDMAzDMAzHfA/4dBI28VtTxwAAAABJRU5ErkJggg==\n",
       "text/latex": [
-       "$$-  \\frac{e_{x}}{\\left(e_{x}^{2} + e_{y}^{2} + e_{z}^{2}\\right)^{\\frac{3}{2}}}\\mathbf{\\hat{e}_x} -  \\frac{e_{y}}{\\left(e_{x}^{2} + e_{y}^{2} + e_{z}^{2}\\right)^{\\frac{3}{2}}}\\mathbf{\\hat{e}_y} -  \\frac{e_{z}}{\\left(e_{x}^{2} + e_{y}^{2} + e_{z}^{2}\\right)^{\\frac{3}{2}}}\\mathbf{\\hat{e}_z}$$"
+       "$$-  \\frac{x}{\\left(x^{2} + y^{2} + z^{2}\\right)^{\\frac{3}{2}}}\\mathbf{\\hat{e}_x} -  \\frac{y}{\\left(x^{2} + y^{2} + z^{2}\\right)^{\\frac{3}{2}}}\\mathbf{\\hat{e}_y} -  \\frac{z}{\\left(x^{2} + y^{2} + z^{2}\\right)^{\\frac{3}{2}}}\\mathbf{\\hat{e}_z}$$"
       ],
       "text/plain": [
-       "         -eₓ          \n",
-       "──────────────────────\n",
-       "                   3/2\n",
-       "⎛  2      2      2⎞   \n",
-       "⎝eₓ  + e_y  + e_z ⎠    e_x +         -e_y          \n",
-       "──────────────────────\n",
-       "                   3/2\n",
-       "⎛  2      2      2⎞   \n",
-       "⎝eₓ  + e_y  + e_z ⎠    e_y +         -e_z          \n",
-       "──────────────────────\n",
-       "                   3/2\n",
-       "⎛  2      2      2⎞   \n",
-       "⎝eₓ  + e_y  + e_z ⎠    e_z"
+       "       -x        \n",
+       "─────────────────\n",
+       "              3/2\n",
+       "⎛ 2    2    2⎞   \n",
+       "⎝x  + y  + z ⎠    e_x +        -y        \n",
+       "─────────────────\n",
+       "              3/2\n",
+       "⎛ 2    2    2⎞   \n",
+       "⎝x  + y  + z ⎠    e_y +        -z        \n",
+       "─────────────────\n",
+       "              3/2\n",
+       "⎛ 2    2    2⎞   \n",
+       "⎝x  + y  + z ⎠    e_z"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "RF = ReferenceFrame('e')\n",
-    "from sympy.physics.vector import gradient\n",
     "scalar_field = 1/(sqrt(RF[0]**2+RF[1]**2+RF[2]**2))\n",
-    "gradient(scalar_field, RF)"
+    "gr = gradient(scalar_field, RF)\n",
+    "gr.subs({RF[0]: x, RF[1]: y, RF[2]: z})"
    ]
   },
   {
@@ -834,32 +835,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
-    "hide_input": true,
-    "scrolled": true
+    "hide_input": false,
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXUAAAApCAYAAADKxrnwAAAABHNCSVQICAgIfAhkiAAAB+JJREFU\neJztnVuoFVUYx3/HCyc1I+2iYqVhIJKR4jEj1BSUDKpTkSY+1AhhpBRpD5YPqT1UWoQagSial4fK\nyDLoIqRdFZFOaOYpxbxgh7RIKzVJq93DN8Oevd3n7JlxZq+1Zn8/WJw96+yZ9WfWf63Zs66gKIqi\nKIpSQ/oD64DfgN+Bd4A+RhUpiqV0Mi2gHbQQKwHXA98AbcBoYBxwJbDcoCbFLFo/OMb1wHHgBWAI\nMAz4HHjXpCjFGJuB58viJgB/GtCimEfrhyo0mBZQgc1ACzAvFDcB2AhcZkRRegwHmv3PG4BWg1pc\nYABwGDgL/BeK7wz8BVxhQFOaqB/ik+f6AXLoiQFAASmwp0PhLPKq5TI9gR+RyqkA7AW6GVVkP/cA\nfwA3VAjXIQVgc+j7zcCKGmtMivohPnmuHyCnnqhWiF1mHZJRTwBz/c+vGVVkP3cC/wCXtvP/LsDR\n0OcWoF8NdKWB+iE+ea4fIKeeqFaIAbYBo/zPq4DZWYtKgalIBs0PxS324+42osgNegG/Iu2lw4FB\nwETE6EEn/3ZgIDATeK72EhOhfkhGlPoBpI19lx/+BZoy1pUGufVElEI8yf//HGClAY1KbWkCtiKj\nHE4Bu4FnQv9fAkwH9iCvr0p+iVI/hFkILK2ZOqVdqhVikNfsLUDX2kpzDg950o8zKyNTpiHtqbNM\nC3EED7c9EaV+AHgSWIudg0GUMkYCh5DebhcYhbSVHUQ6dM4A3yJNBb0zTtvD7QIchSZgP9Km7gIm\n/QD14QkPqR86G9YRFdOeMEp/5MkcTEgZalZOVZ6l2JNdKRwBBmeYvkf+C/BqikPAbMe0HyD/nrgP\n+BhoNC0kIjZ4whjdkE6xsf7xZOAtc3Kq8gClmfMV0gmyGPg5FN9Kdr8oPPJbgAcB+4BXTQuJiA1+\ngHx7AuAk8uYWdJTeZVZOh9jiCSUiX1PMlA8obdsbQmlm3puRBo98F2CXsMEPoJ6wCVs8oUSgOx2/\nUpWHl1NI83CM9ArAmhTSVKJhwg+gnrCZzDzhSueSa/QiXq/7VSmkuQS4vCxuGNLevBYp4GF2pZCm\nEg0TfgD1hM1k5gkd7pMN3ZHpy8H93Qp81MH3W4EPkRlzm/y4icAnwO3Ap/61pgBvx9DhAa8D44HP\nYpynpEtSP7yBTErZSXHCHcAXwBikT2lqTC0e6gkbSOqJgcjov0osBBYEB3Fe0TR0HAJaQnF7qTwL\nritwP/LUDljun3MI6IsMcyogBTEunn/uuJjnmb6HeQuQzA+jQ+fc6Mf1RWZJFpCJeHHxiO8J0/cv\nbyEgiSf6ATtC4WDoGnMrnN8h1yJP9lZkDOXkuBdIAZc0TKE0I48gr8NPI0vJbkLWsSggT9+A7sAP\nfvwx/+8Bqk+NroRH/AIcFZfywgYNSf2w2497xT9+zD9uI9mICA/1hC0aknoioA9SNxSQkYGxF//q\nh7THgfxaaAN6xL3IReKahvlE6wwZWHbeCGSNiwLyq2wUyfDIrgC7lhc2aEjihxl+3C/Ir7Yt/vGi\nhHo91BM2aUhaR/RE5uoUkB+BqSxDvRt5IpnEBQ1NyMJj+5ElQ88jBfRLZKH/Wyuc00xphsZtNw3w\nyK4Al+NCXtigIa4feiBT4gvAoxQf9kMS6vNQT9imIa4nGpE2+AIynn1gGiJHAN+lcSHVcAF9kUWL\nChSfxCcxb8yOyGte2KJhKeKD0/7fnRmkkTZ5zg+TGjohgyUKyO5fw9O4aG+kUf+2iN9fQ6hHNiVc\n1BCFBmSKc1BwG5HOkALyZLZxT1kX88IGDXEYTOkr+swM0kgTF/PDBg1ReJCiD45T2mn6CFxYSVTb\n0LUReA94EWmYz4J61vA4cAfwN/Cw//ch5JVsPPBUimlFoZ7zwiYN+5C2dBBPvJlBGlGIsuFz1vei\n3jWEO0OvRvrbgnANlFbq1XZtb0CeZluB9SmKDFPvGpb5178E+N6P24+0qzYAL6WcXkfUe17YpAGK\nfngfOJFhOu1R7T5A9vdCNch1G9oJC8q/XG3X9tHIK+CuULgpoogLEmuHPGtwjTznhQ0aojIDGdp2\n3k/nlhSvHYdq9wGyz4+8a0iVAUgbTRobus4ru8Z54FxZ3Jg60OAyecsLGzQkZY2v4Sf8NlMDpH0f\nkuRHHjVkQrD2y83Ik2ZEhe+ci3nN5cCG0PEi5FVlWSiurcJ5edPgMnnLCxs0JMXzg0nSvg9J8iOP\nGjIhqNTPI+22x5Anz8VwgtI2v1P+8YEq5+VNg8vkLS9s0OAyad+HJPmRRw2ZEHSU7kDGQq+n/Q1d\nt1Gc2bgKmJ2ylmoahiPtWQHNwIoaawA3dyqPiwt+gOw9EUUD5N8TUe9Dlp5QPySg2oauk5BdvOcA\nK2Ncdw3RO6U60tAFOBr63IJMx62lhjB536ncdj9Ack+kqSFMnj0R5T5k7Yms/JCmhjBO+KEFGS/b\n1VD625EpsTORTVlNoTuVC6b9AOoJ2zDtCfVDDEYiy8FuNKhhCTAd2IMsaGMCD7d2Ks8KG/wA6gmb\nsMET6oeI9EdeM4KB90MN6ZiGDB2aZSh913Yqzwpb/ADqCVuwxRPqhwh0Q15pxvrHk5EdV0zQhMyw\nNLUNn0s7lWeFTX4A9YQN2OQJ9YNjrEZ6tBUlQD2hhKl7P9i46l8lBiGLGp2huIenUt+oJ5Qw6gdF\nURRFURRFURRFURRFURRFUWLxP3OBjgznhue5AAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXAAAAAlCAYAAABbLbLPAAAABHNCSVQICAgIfAhkiAAABvFJREFU\neJztnW2IFVUYx39ryZYm5EapULjQG2pSZmWE0lpkBZUSZn4phwijoAiLtkK0+lAkUtoLFBXe6kOl\n+KEPvVFaVFSIhUa+FKYW2otFZdir1e3DM8O9e929Oy/n3GfO3ecHw+6dvTPPf+/znzNz5pw7DxiG\nYRiGYXhgD7CoYd1k4E9gYuvlGEZ5OFxbwBBhCjA7/n01sFVRS2h8CJzdsG4F8DRhfo7mBQOGgA/m\nAn8B4+vWrQS+BMaoKMrHKETzf0AV2AIcqaooLBYBO+pezwF+Ao7RkVMI80Ix7kA+t8blPk1RORgS\nPugANgJPxa9vB/YBJ6spysdzSJJuAXrj3x9XVRQW5yGfWRfQiTTmt6oqyo95oRijgLF1y3LgW+Ak\nTVE5GDI+mAUcBO4EfuXQrnTZmY8kZ2ndumXxustVFIVHJ9ITm4WYfTswXFVRPswLbukF9gKnagvJ\nyJDzwQfAP8Cl2kIMNT4CHkVO4pcpazH0uQsZ3D5FW4jRnAuA34B/gTOVtRh6PIzcL3xDW4ihzmKk\n8Q7ttsmQ43RgP3AdsBY7eLMSId2yHl0ZTliA9MImaQsJkIj28cES4GvgRG0hRnPGA98gCQM4DbkC\n69ESlINpyGDFTuAPpCfxKTJi3tWC+BHtc+C+SdiDPJpeiGgPHywGfkQGtesHMo/QFJUR7TahJXQB\n24AnG9a/hMwJDoEl1KYI9bd8hf/Bl4iwD9xhyHTRXmSmwWhdObnR9kJE2D4AmZG2n/4/vwsVdWVB\n2wdGSubSNzHvIyPOy5CGKFm/FTjMo46IsA/cHsTw25CrrhApgxciwvZBO1AGHxgp2UgtIa8gVw8J\nE+ibyDkedUTYgatNGbwQYT7Qpgw+MFIwgubdpMZluaO4uzPErAIVR3GNgdHwwu4M8cwHrcGrD+xZ\nKG4ZTd+z62Ac6yjuCuDohnVnIM9aeBY5sOvZ5CiuMTAaXjAflA+vPkh2XM2ykTEgI4ED1D7X9cBr\nTd6/FXgVuAJ4OV53EfAWcD7wdryvecCajFoiYBUwE3gn5TbmAzd0IFdeebzwAvJtvQ3IrIWEd4EZ\nyGD+/AxaIrL7AMwLrsjbJnQDuwZ4z73APVmFnIAYYCsy9eWqrDsoSCjxP6bWHdoCHNXPe4YDV9J3\nZsUT8Ta7kOlRO+PXq3LqjfBz71M7D2XQ4NML0+u2Sea9j0W+zFYFLsmoNcLfPfBQ8qAdP48PxiHf\nQE6WnXX76M0jdhzSHQMx1F7k7NIqQok/j0OnB61AnudyP3KlnUyJ6q7bbgTynI8q8F38cwf9JzsN\nEX4OXO08lEGDby9sjtc9FL++MX69l+yzFCL8NeCh5EE7fl4fJIxB2oIq8mgRJ08u3IycgbQoc/yl\npBu46G7YbiryjcMqcsU1jfxEtGb2gXYeyqDBtRcWxuv2IVdm6+LXD+bQFtG6WShlzoN2/Lxtwijg\nk/hv23H0GOWpwGcudtTG8c8CngG+AH5Hnqq4D3gPeAA4t59tZtM3mVnudTYS4f/A1c5DGTT48MJI\n4BckfzdQO6lPyKEvojUNeAh50I6f1QedyD3zKjJfvNuF0C7kPo7WlyvaNf5Y4AckWckZ92f0r24H\nQjsPZdDgM/5KxAMH4p8bPMRwRTvnQSv+MGTiQhV5CucUFzvtREbDr8mwTYUcI6YO47vUkDf+YHQA\nr1M7UDuRgYsqcgYe5jheUbTzkFeDdvwsnErfLvdNnuIUJdQ8uNLgywdXU8v99/Qd0Lw+eVN9wzBY\nCbMO5J9eDzzvWGxCswK2k1oQv1nJJp///83AxcjnvyD+eS3SzZoJ3OY4XjPK7oOJLdKg5YWEz5F7\n3yD5eNFTnGaU3Qvt3CbUD1Qeh4yHJcvx/W0wWAmz6cgVwaa6ZXIKIRXSn+nWIPNg61kHPFYgfhYN\nzUo2FYkfEr58AOnz0MwHRTSkjQ/l8MIjSGOx2sO+02BtQjl8kBofJcwqpE+WrwK2WTQkhFqyyQW+\nStlVSJeHMvkAWu+FhcjUsoNIA3FOi+L2h7UJNYJoE4qWMLsbGXhJloPA3w3rZgywrasCtkU0gJVs\nAjel7PLmoSw+AB0vVJD/fw919zsVsTYhkDbBRQmzLqR7kSxrka5g/bqBJqK7KmBbRIOVbHJXyi5v\nHsrgAzAvgLUJEIgPfJUwq5Ctq+KjgG1aDVayyW8puwrpvaDpAzAvgLUJEIgPxuOvhFmFbMnyUcA2\njYZ2KNlUFJ8+gGxe0PIBmBfA2gQIxAe+S5hVyJasBbgvYDuYhnYo2VSUVpSyq5DeCxo+APMCWJsA\n5oPchF7A1nCD+cBIMC+UnHYpYGsUw3xgJJgXAqKH8AvYGsXpwXxgCD2YFwzDMAzDMAzDMAzDMAzD\nMAxjyPI/lnCrW5lK7lUAAAAASUVORK5CYII=\n",
       "text/latex": [
-       "$$\\frac{e_{x}}{e_{x}^{2} + e_{y}^{2} + e_{z}^{2}}\\mathbf{\\hat{e}_x} + \\frac{e_{y}}{e_{x}^{2} + e_{y}^{2} + e_{z}^{2}}\\mathbf{\\hat{e}_y} + \\frac{e_{z}}{e_{x}^{2} + e_{y}^{2} + e_{z}^{2}}\\mathbf{\\hat{e}_z}$$"
+       "$$\\frac{x}{x^{2} + y^{2} + z^{2}}\\mathbf{\\hat{e}_x} + \\frac{y}{x^{2} + y^{2} + z^{2}}\\mathbf{\\hat{e}_y} + \\frac{z}{x^{2} + y^{2} + z^{2}}\\mathbf{\\hat{e}_z}$$"
       ],
       "text/plain": [
-       "        eₓ       \n",
-       "─────────────────\n",
-       "  2      2      2\n",
-       "eₓ  + e_y  + e_z  e_x +        e_y       \n",
-       "─────────────────\n",
-       "  2      2      2\n",
-       "eₓ  + e_y  + e_z  e_y +        e_z       \n",
-       "─────────────────\n",
-       "  2      2      2\n",
-       "eₓ  + e_y  + e_z  e_z"
+       "     x      \n",
+       "────────────\n",
+       " 2    2    2\n",
+       "x  + y  + z  e_x +      y      \n",
+       "────────────\n",
+       " 2    2    2\n",
+       "x  + y  + z  e_y +      z      \n",
+       "────────────\n",
+       " 2    2    2\n",
+       "x  + y  + z  e_z"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +869,8 @@
     "RF = ReferenceFrame('e')\n",
     "from sympy.physics.vector import gradient\n",
     "scalar_field = log(sqrt(RF[0]**2+RF[1]**2+RF[2]**2))\n",
-    "gradient(scalar_field, RF)"
+    "gr = gradient(scalar_field, RF)\n",
+    "gr.subs({RF[0]: x, RF[1]: y, RF[2]: z})"
    ]
   },
   {
@@ -893,7 +895,8 @@
     "<div class=\"exercises\">\n",
     "3.) Legyen $\\mathbf{r}:=(x,y,z)$, $\\mathbf{a}\\in\\mathbf{R}^3$ adott vektor, \n",
     "$\\hat{\\mathbf{r}}:=\\langle\\mathbf{a},\\mathbf{r}\\rangle$. \n",
-    "$$f'(\\mathbf{r}):=?$$\n",
+    "<p>\n",
+    "$f'(\\mathbf{r})=?$</p>\n",
     "</div>"
    ]
   },
@@ -950,9 +953,9 @@
    "source": [
     "<div class=\"exercises\">\n",
     "5.) Legyen $f,g:\\mathbf{R}\\to\\mathbf{R}^n$, $h(x):=\\langle f(x), g(x)\\rangle$.\n",
-    "$$\n",
-    "h'(x)=?\n",
-    "$$\n",
+    "<p>\n",
+    "$h'(x)=?$\n",
+    "</p>\n",
     "</div>"
    ]
   },
@@ -969,7 +972,7 @@
     "\\begin{align*}\n",
     "h'(x) &=\\sum_{i=1}^n f_i'(x)g_i(x)+f_i(x)g_i'(x)\\\\\n",
     "      &=\\sum_{i=1}^n f_i'(x)g_i(x)+\\sum_{i=1}^n f_i(x)g_i'(x)\\\\\n",
-    "      &=\\langle \\,\\text{grad}f(x), g(x)\\,\\rangle + \\langle\\, f(x),\\text{grad}g(x)\\,\\rangle.\n",
+    "      &=\\langle \\,\\text{grad}\\,f(x), g(x)\\,\\rangle + \\langle\\, f(x),\\text{grad}\\,g(x)\\,\\rangle.\n",
     "\\end{align*}\n",
     "$$\n",
     "</div>"
@@ -986,7 +989,7 @@
    "source": [
     "<div class=\"exercises\">\n",
     "6.) Legyen $\\mathbf{r}:=(x,y,z)$. Legyen $f(\\mathbf{r})=e^{\\Vert\\mathbf{r} \\Vert}$.\n",
-    "$$f'(\\mathbf{r}):=$$\n",
+    "<p>$f'(\\mathbf{r})=?$</p>\n",
     "</div>"
    ]
   },
@@ -1045,42 +1048,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1104,6 +1071,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide_input": true,
     "solution2": "hidden"
    },
@@ -1114,6 +1082,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide_input": true,
     "scrolled": false,
     "solution2": "hidden"
@@ -1125,6 +1094,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide_input": true,
     "scrolled": false,
     "solution2": "hidden"
@@ -1136,6 +1106,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide_input": true,
     "solution2": "hidden"
    },
@@ -1144,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "hide_input": false,
     "scrolled": false
@@ -1258,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "hide_input": false,
     "scrolled": true
