--- a/MultiVariable_limit.ipynb
+++ b/MultiVariable_limit.ipynb
@@ -475,8 +475,7 @@
         "        borderwidth=2\n",
         "    )\n",
         ")\n",
-        "fig.show()\n",
-        "fig.show(renderer=\"notebook_connected\")"
+        "fig.show()"
       ],
       "execution_count": 12,
       "outputs": [
@@ -619,6 +618,32 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vPpjvrc56FXQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "fig.show(renderer=\"notebook_connected\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zw1HEsos6SBv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "fig.show(renderer=\"browser\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
