--- a/Multivariable_gradient.ipynb
+++ b/Multivariable_gradient.ipynb
@@ -39,8 +39,6 @@
         "\n",
         ">>[Jupyter to print the results for any variable or statement on it’s own line](#scrollTo=EKv-NQ5WsDTl)\n",
         "\n",
-        ">>[Matplotlib customization](#scrollTo=UWko5SYdkRsO)\n",
-        "\n",
         ">>[Versions](#scrollTo=LSFQ9iqfFRFn)\n",
         "\n",
         ">[Gradient](#scrollTo=HXT5esCBskVw)\n",
@@ -623,7 +621,7 @@
         "id": "kshDe4F5Wpy9"
       },
       "source": [
-        "$\\text{grad}f(\\mathbf{r})=\\dfrac{e^{\\Vert\\mathbf{r}\\Vert}}{\\Vert\\mathbf{r}\\Vert^2}\\mathbf{r}$."
+        "$\\text{grad}f(\\mathbf{r})=\\dfrac{e^{\\Vert\\mathbf{r}\\Vert}}{\\Vert\\mathbf{r}\\Vert}\\mathbf{r}$."
       ]
     },
     {
