--- a/MultiVariable_limit.ipynb
+++ b/MultiVariable_limit.ipynb
@@ -116,16 +116,16 @@
       "metadata": {
         "id": "Xxtuo9bsCeWn",
         "colab_type": "code",
+        "outputId": "16fcf273-0dfd-4dc1-cda0-6641f853f34e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 176
-        },
-        "outputId": "16fcf273-0dfd-4dc1-cda0-6641f853f34e"
+        }
       },
       "source": [
         "pio.renderers"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +490,7 @@
         ")\n",
         "fig.show(renderer=\"notebook_connected\")"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -656,7 +656,7 @@
         ")\n",
         "fig.show(renderer=\"notebook_connected\")"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -747,6 +747,39 @@
       },
       "source": [
         "Mivel $|f(x+y)|\\leq |x+y|$ ezért $\\displaystyle{\\lim_{(x,y)\\to(0,0)}}f(x,y)=0$."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A1VGIR5ki6Tp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 16
+        },
+        "outputId": "c9cb2a3d-ae8c-4922-fccf-8a95d5aa5b97"
+      },
+      "source": [
+        "%%html\n",
+        "<script src=\"https://cdn.rawgit.com/parente/4c3e6936d0d7a46fd071/raw/65b816fb9bdd3c28b4ddf3af602bfd6015486383/code_toggle.js\"></script>"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<script src=\"https://cdn.rawgit.com/parente/4c3e6936d0d7a46fd071/raw/65b816fb9bdd3c28b4ddf3af602bfd6015486383/code_toggle.js\"></script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     }
   ]
