--- a/MultiVariable_limit.ipynb
+++ b/MultiVariable_limit.ipynb
@@ -42,14 +42,17 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "ceS8QYIRuu7Y",
-        "colab_type": "text"
+        "id": "SI_RjdN-kNEr",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
-        "**Modulok** "
-      ]
+        "################### MODULOK"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -114,50 +117,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xxtuo9bsCeWn",
+        "id": "DcvgEXTzklY9",
         "colab_type": "code",
-        "outputId": "16fcf273-0dfd-4dc1-cda0-6641f853f34e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        }
+        "colab": {}
       },
       "source": [
-        "pio.renderers"
+        "######################  BEÁLLÍTÁSOK"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Renderers configuration\n",
-              "-----------------------\n",
-              "    Default renderer: 'colab'\n",
-              "    Available renderers:\n",
-              "        ['plotly_mimetype', 'jupyterlab', 'nteract', 'vscode',\n",
-              "         'notebook', 'notebook_connected', 'kaggle', 'azure', 'colab',\n",
-              "         'cocalc', 'databricks', 'json', 'png', 'jpeg', 'jpg', 'svg',\n",
-              "         'pdf', 'browser', 'firefox', 'chrome', 'chromium', 'iframe',\n",
-              "         'iframe_connected', 'sphinx_gallery']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 48
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XMTKNzXAu9bY",
-        "colab_type": "text"
-      },
-      "source": [
-        "**Beállítások**"
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
