--- a/MultiVariable_continuity.ipynb
+++ b/MultiVariable_continuity.ipynb
@@ -40,14 +40,17 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "ceS8QYIRuu7Y",
-        "colab_type": "text"
+        "id": "p6885a4NnQy0",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
-        "**Modulok** "
-      ]
+        "#######################   MODULOK"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -108,50 +111,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xxtuo9bsCeWn",
+        "id": "40dHNY2xnXv7",
         "colab_type": "code",
-        "outputId": "03b697a0-29d4-4713-cfdd-de350e437787",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        }
+        "colab": {}
       },
       "source": [
-        "pio.renderers"
+        "#######################  BEÁLLÍTÁSOK "
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Renderers configuration\n",
-              "-----------------------\n",
-              "    Default renderer: 'colab'\n",
-              "    Available renderers:\n",
-              "        ['plotly_mimetype', 'jupyterlab', 'nteract', 'vscode',\n",
-              "         'notebook', 'notebook_connected', 'kaggle', 'azure', 'colab',\n",
-              "         'cocalc', 'databricks', 'json', 'png', 'jpeg', 'jpg', 'svg',\n",
-              "         'pdf', 'browser', 'firefox', 'chrome', 'chromium', 'iframe',\n",
-              "         'iframe_connected', 'sphinx_gallery']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XMTKNzXAu9bY",
-        "colab_type": "text"
-      },
-      "source": [
-        "**Beállítások**"
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -291,7 +259,7 @@
       "source": [
         "Eq(f(x, m*x), simplify(f(x, m*x)))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -341,7 +309,7 @@
         "cc = Limit('f(x,mx)', x, 0)\n",
         "Eq(cc, Limit(f(x,m*x), x, 0).doit())"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -390,7 +358,7 @@
       "source": [
         "print('f(x,x**2) =',f(x,x**2))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +437,7 @@
         ")\n",
         "fig.show(renderer=\"notebook_connected\")"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -557,13 +525,33 @@
       "metadata": {
         "id": "VQAX4vovzY5A",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 16
+        },
+        "outputId": "c4cf78a4-0fc2-4072-91f2-d79019262208"
       },
       "source": [
-        ""
+        "%%html\n",
+        "<script src=\"https://cdn.rawgit.com/parente/4c3e6936d0d7a46fd071/raw/65b816fb9bdd3c28b4ddf3af602bfd6015486383/code_toggle.js\"></script>"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<script src=\"https://cdn.rawgit.com/parente/4c3e6936d0d7a46fd071/raw/65b816fb9bdd3c28b4ddf3af602bfd6015486383/code_toggle.js\"></script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
