--- a/MultiVariable_differentiation.ipynb
+++ b/MultiVariable_differentiation.ipynb
@@ -42,14 +42,17 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "ceS8QYIRuu7Y",
-        "colab_type": "text"
+        "id": "NwvFBK7EouVw",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
-        "**Modulok** "
-      ]
+        "######################  MODULOK"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -114,50 +117,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xxtuo9bsCeWn",
+        "id": "zkssVpN7o0Wl",
         "colab_type": "code",
-        "outputId": "857ce1f3-c066-4802-92c4-340005bc8e39",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        }
+        "colab": {}
       },
       "source": [
-        "pio.renderers"
+        "#######################  BEÁLLÍTÁSOK "
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Renderers configuration\n",
-              "-----------------------\n",
-              "    Default renderer: 'colab'\n",
-              "    Available renderers:\n",
-              "        ['plotly_mimetype', 'jupyterlab', 'nteract', 'vscode',\n",
-              "         'notebook', 'notebook_connected', 'kaggle', 'azure', 'colab',\n",
-              "         'cocalc', 'databricks', 'json', 'png', 'jpeg', 'jpg', 'svg',\n",
-              "         'pdf', 'browser', 'firefox', 'chrome', 'chromium', 'iframe',\n",
-              "         'iframe_connected', 'sphinx_gallery']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XMTKNzXAu9bY",
-        "colab_type": "text"
-      },
-      "source": [
-        "**Beállítások**"
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -406,7 +374,7 @@
         "\n",
         "fig.show(renderer=\"notebook_connected\")"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -522,6 +490,39 @@
         "f_{yx}''(0,0)=\\lim_{h\\to 0}\\frac{f_y'(h,0)-f_y'(0,0)}{h}=\\lim_{h\\to 0}\\frac{h-0}{h}=1.\n",
         "$$\n",
         "</div>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F5B_3RMao74a",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 16
+        },
+        "outputId": "54df32e8-3fb4-498f-eb3e-7eebc01da265"
+      },
+      "source": [
+        "%%html\n",
+        "<script src=\"https://cdn.rawgit.com/parente/4c3e6936d0d7a46fd071/raw/65b816fb9bdd3c28b4ddf3af602bfd6015486383/code_toggle.js\"></script>"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<script src=\"https://cdn.rawgit.com/parente/4c3e6936d0d7a46fd071/raw/65b816fb9bdd3c28b4ddf3af602bfd6015486383/code_toggle.js\"></script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     }
   ]
