--- a/MultiVariable_Jacobi_matrix.ipynb
+++ b/MultiVariable_Jacobi_matrix.ipynb
@@ -180,9 +180,7 @@
         "colab_type": "text"
       },
       "source": [
-        "grad, \n",
         "$\\newcommand{\\grad}{\\mathrm{grad}}$\n",
-        "vec\n",
         "$\\newcommand{\\vec}[1]{\\mathbf{#1}}$"
       ]
     },
@@ -317,9 +315,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 118
         },
-        "outputId": "3634d385-f674-4f1c-8201-6638933a9502"
+        "outputId": "a531c799-2417-47e7-ab33-4a74c673254f"
       },
       "source": [
         "f1 = rho*cos(phi)\n",
@@ -328,20 +326,46 @@
         "varlist = [rho, phi]\n",
         "polar_jacobi = jacobi(funclist, varlist)\n",
         "print('The Jacobi matrix is\\n')\n",
-        "sym.pprint(polar_jacobi)"
+        "polar_jacobi"
       ],
-      "execution_count": 94,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "The Jacobi matrix is\n",
-            "\n",
-            "⎡cos(φ)  -ρ⋅sin(φ)⎤\n",
-            "⎢                 ⎥\n",
-            "⎣sin(φ)  ρ⋅cos(φ) ⎦\n"
+            "\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/latest.js?config=default'></script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$$\\left[\\begin{matrix}\\cos{\\left (\\phi \\right )} & - \\rho \\sin{\\left (\\phi \\right )}\\\\\\sin{\\left (\\phi \\right )} & \\rho \\cos{\\left (\\phi \\right )}\\end{matrix}\\right]$$",
+            "text/plain": [
+              "⎡cos(φ)  -ρ⋅sin(φ)⎤\n",
+              "⎢                 ⎥\n",
+              "⎣sin(φ)  ρ⋅cos(φ) ⎦"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
         }
       ]
     },
