--- a/MultiVariable_extreme_value.ipynb
+++ b/MultiVariable_extreme_value.ipynb
@@ -33,9 +33,7 @@
       "source": [
         ">[Table of Contents](#scrollTo=laFoxSf1EXIo)\n",
         "\n",
-        ">>[1 Jacobi mátrix](#scrollTo=L7dwXCLCSWWC)\n",
-        "\n",
-        ">>>[1.1 Példa](#scrollTo=FNKobSb6vRcA)\n",
+        ">[Szélsőérték számítás](#scrollTo=fs-pYKHiSWWf)\n",
         "\n"
       ]
     },
