--- a/MultiVariable_extreme_value.ipynb
+++ b/MultiVariable_extreme_value.ipynb
@@ -306,6 +306,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fAFA-x0Ni-Aw",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Tétel (Sylvester kritérium). Legyen $A\\,$ $n\\times n$-es szimmetrikus mátrix, \n",
+        "$$ \n",
+        "A^{(k)}=\n",
+        "\\left[\n",
+        "\\begin{array}{cccc}\n",
+        "  a_{11} & a_{12} & \\dots & a_{1k} \\\\\n",
+        "  a_{21} & a_{22} & \\dots & a_{2k} \\\\\n",
+        "  \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+        "  a_{k1} & a_{k2} & \\dots & a_{kk} \\\\\n",
+        "\\end{array}\n",
+        "\\right] ,\n",
+        "$$\n",
+        "$\\Delta_k:=\\det\\left(A^{(k)} \\right)$. \\\\\n",
+        "Ekkor \n",
+        "* $A\\,$ pozitív definit $\\Longleftrightarrow$ $\\Delta_1>0,\\,\\Delta_2>0,\\ldots,\\Delta_n>0$.\n",
+        "* $A\\,$ negatív definit $\\Longleftrightarrow$ $(-1)^1\\Delta_1>0,\\,(-1)^2\\Delta_2>0,\\ldots,(-1)^n\\Delta_n>0$.\n",
+        "* $A\\,$ indefinit, ha az első $\\Delta_k$ amelyik az előző kettő előjel sorozatot elrontja, nem a megfelelő előjel.\n",
+        "* $A\\,$ pozitív szemidefinit vagy negatív szemidefinit vagy indefinit, ha az első $\\Delta_k$ amelyik az előző kettő előjel sorozatot elrontja $0$.\n",
+        "\n",
+        "Megjegyzés 1. A tétel pontos.\n",
+        "\n",
+        "Megjegyzés 2. \n",
+        "* $A\\,$ pozitív definit $\\Longleftrightarrow$ minden sajátértéke pozitív.\n",
+        "* $A\\,$ negatív definit $\\Longleftrightarrow$ minden sajátértéke negatív.\n",
+        "* Ha $A\\,$-nak van pozitív és negatív sajátértéke, akkor indefinit."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "2qT1qH0hVfur",
