--- a/MultiVariable_extreme_value.ipynb
+++ b/MultiVariable_extreme_value.ipynb
@@ -324,7 +324,8 @@
         "\\end{array}\n",
         "\\right] ,\n",
         "$$\n",
-        "$\\Delta_k:=\\det\\left(A^{(k)} \\right)$. \\\\\n",
+        "$\\Delta_k:=\\det\\left(A^{(k)} \\right)$. \n",
+        "\n",
         "Ekkor \n",
         "* $A\\,$ pozitív definit $\\Longleftrightarrow$ $\\Delta_1>0,\\,\\Delta_2>0,\\ldots,\\Delta_n>0$.\n",
         "* $A\\,$ negatív definit $\\Longleftrightarrow$ $(-1)^1\\Delta_1>0,\\,(-1)^2\\Delta_2>0,\\ldots,(-1)^n\\Delta_n>0$.\n",
